# cuda-kanerva-sdm

./: CMakeLists.txt  README.md  all_four_combined.py  combined_results.csv  cuda-kanerva-sdm.sln  cuda-kanerva-sdm.vcxproj  grid_search.py  grid_search_results_cuda.csv  kanerva_sdm.cuh  kanerva_sdm.py  main.cu  plot_results.py  plot_speedup.py
.claude/: settings.local.json
cpp/: README.md
cpp/src/: bindings.cpp  sdm_cpp.cp311-win_amd64.pyd  sdm_cpp.cp314-win_amd64.pyd
cpp/src/sdm_cpp.egg-info/: SOURCES.txt  requires.txt
